--- a/front-end/src/app/auth/auth.html
+++ b/front-end/src/app/auth/auth.html
@@ -21,19 +21,21 @@
         <div class="panel panel-default">
             <div class="panel-heading">Register</div>
             <div class="panel-body">
-                <form>
+                <form name="register">
                     <div class="form-group">
                         <label>Email Address</label>
                         <input type="email" class="form-control">
                     </div>
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" ng-model="pwd" name="pwd">
                     </div>
                      <div class="form-group">
                         <label>Confirm Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="pwdConfirm" compare-to="pwd" ng-model="pwdConfirm">
+                         <span class="red" ng-show="register.pwdConfirm.$dirty && register.pwdConfirm.$invalid">Password do not match</span>
                     </div>
+
                     <button type="submit" class="btn btn-default">Register</button>
                 </form>
             </div>
