--- a/front-end/src/app/index.scss
+++ b/front-end/src/app/index.scss
@@ -18,7 +18,9 @@ $icon-font-path: "../../bootstrap-sass/assets/fonts/bootstrap/";
   color: #000;
   padding: 0.2em 0;
 }
-
+.red{
+    color:red;
+}
 .thumbnail {
   height: 200px;
 
